a fix (bug #4214: Table corruption with myisampack and large BLOB objects).